--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   hive: ^2.1.0
   hive_flutter: ^1.1.0
   json_serializable: ^6.1.5
+  cached_network_image: ^3.2.0
 
 dev_dependencies:
   flutter_test:
