--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   hive_flutter: ^1.1.0
   json_serializable: ^6.1.5
   cached_network_image: ^3.2.0
+  path_provider: ^2.0.9
 
 dev_dependencies:
   flutter_test:
