--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   json_serializable: ^6.1.5
   cached_network_image: ^3.2.0
   path_provider: ^2.0.9
+  permission_handler: ^9.2.0
 
 dev_dependencies:
   flutter_test:
