--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,14 +19,15 @@ dependencies:
   hive_flutter: ^1.1.0
   cached_network_image: ^3.2.0
   path_provider: ^2.0.9
-  google_fonts: ^2.3.1
+  google_fonts: ^3.0.1
+  async: ^2.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^1.0.0
-  hive_generator: ^1.1.2
+  flutter_lints: ^2.0.1
+  hive_generator: ^2.0.0
   build_runner: ^2.1.8
 
 flutter:
